--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apollo-server-express": "^2.22.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
     "css": "^2.2.4",
     "date-fns": "^2.17.0",
     "express": "^4.17.1",
@@ -26,6 +27,7 @@
     "graphql-tools": "^4.0.8",
     "mongoose": "^5.12.3",
     "react": "^17.0.1",
+    "react-apollo": "^3.1.5",
     "react-bootstrap": "^1.4.3",
     "react-dates": "^21.8.0",
     "react-dom": "^17.0.1",
